--- a/http-server/index.html
+++ b/http-server/index.html
@@ -391,7 +391,7 @@
 
         <!-- Footer -->
         <footer class="max-w-6xl mx-auto mt-12 text-center text-secondary text-sm">
-            <p>Smart Home Controller &copy; 2024 | MQTT Broker: broker.hivemq.com</p>
+            <p>Smart Home Controller</p>
         </footer>
     </div>
 
